--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </video>
         <div class="home-text">
             <h4>Hello</h4>
-            <h1>I'm Geek <br> <span>101</span></h1>
+            <h1>I'm Vitthal <br> <span>101</span></h1>
             <h3>Software Developer and Programming Enthusiast </h3>
             <a href="https://www.geeksforgeeks.org/" class="btn" target="_blank">Download Resume</a>
         </div>
@@ -51,7 +51,7 @@
 
         <div class="about-text">
             <h2>About Me</h2>
-            <h4>Hi, My name is Geek101 !!</h4>
+            <h4>Hi, My name is Vitthal !!</h4>
             <p>I am a B.Tech Final Year Student of XYZ College, Pursuing My Degree in XYZ . I have a keen Interest in Problems Solving and Finding new and Dynamic Ideas.</p><br>
             <p>I am a Machine Learning Enthusiast & Front-end Web Developer. I can provide clean code and pixel perfect design.</p>
             <div class="about-gri">
